Refactor ImageNBit as subclass of np.ndarray

--- a/src/demos/list_observation_index.ipynb
+++ b/src/demos/list_observation_index.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +53,7 @@
        "      <th>iso</th>\n",
        "      <th>timestamp</th>\n",
        "      <th>camera</th>\n",
+       "      <th>bit_depth</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -67,6 +68,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:49:31</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -79,6 +81,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 01:05:35</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -91,6 +94,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:48:41</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -103,6 +107,7 @@
        "      <td>49</td>\n",
        "      <td>2025-01-05 23:07:10</td>\n",
        "      <td>Google Pixel 6</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -115,6 +120,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:12:22</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -127,6 +133,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:18:32</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -139,6 +146,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:36:48</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -151,6 +159,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:37:58</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -163,6 +172,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:38:55</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -175,6 +185,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:39:31</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -187,6 +198,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:40:29</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -199,6 +211,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:41:31</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -211,6 +224,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:42:17</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -223,6 +237,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:45:32</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -235,6 +250,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:46:14</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -247,6 +263,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:50:41</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -259,6 +276,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:51:19</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -271,6 +289,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:51:48</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -283,6 +302,7 @@
        "      <td>3200</td>\n",
        "      <td>2024-11-05 00:52:30</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -295,6 +315,7 @@
        "      <td>1600</td>\n",
        "      <td>2024-11-05 00:52:50</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -307,6 +328,7 @@
        "      <td>800</td>\n",
        "      <td>2024-11-05 00:53:09</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
@@ -319,6 +341,7 @@
        "      <td>400</td>\n",
        "      <td>2024-11-05 00:53:29</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
@@ -331,6 +354,7 @@
        "      <td>200</td>\n",
        "      <td>2024-11-05 00:53:53</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -343,6 +367,7 @@
        "      <td>100</td>\n",
        "      <td>2024-11-05 00:54:11</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
@@ -355,6 +380,7 @@
        "      <td>12800</td>\n",
        "      <td>2024-11-05 00:54:36</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -367,6 +393,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:55:06</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
@@ -379,6 +406,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:56:05</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -391,6 +419,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:56:21</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
@@ -403,6 +432,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:56:32</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
@@ -415,6 +445,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:56:46</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -427,6 +458,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:57:06</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
@@ -439,6 +471,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:57:16</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
@@ -451,6 +484,7 @@
        "      <td>6400</td>\n",
        "      <td>2024-11-05 00:57:44</td>\n",
        "      <td>Canon EOS 1200D</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
@@ -463,6 +497,7 @@
        "      <td>435</td>\n",
        "      <td>2024-11-05 00:36:54</td>\n",
        "      <td>Google Pixel 6</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34</th>\n",
@@ -475,6 +510,7 @@
        "      <td>411</td>\n",
        "      <td>2024-11-05 00:43:11</td>\n",
        "      <td>Google Pixel 6</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -555,45 +591,45 @@
        "33          6.81       1.9  15.999573    435 2024-11-05 00:36:54   \n",
        "34          6.81       1.9  15.999573    411 2024-11-05 00:43:11   \n",
        "\n",
-       "             camera  \n",
-       "0   Canon EOS 1200D  \n",
-       "1   Canon EOS 1200D  \n",
-       "2   Canon EOS 1200D  \n",
-       "3    Google Pixel 6  \n",
-       "4   Canon EOS 1200D  \n",
-       "5   Canon EOS 1200D  \n",
-       "6   Canon EOS 1200D  \n",
-       "7   Canon EOS 1200D  \n",
-       "8   Canon EOS 1200D  \n",
-       "9   Canon EOS 1200D  \n",
-       "10  Canon EOS 1200D  \n",
-       "11  Canon EOS 1200D  \n",
-       "12  Canon EOS 1200D  \n",
-       "13  Canon EOS 1200D  \n",
-       "14  Canon EOS 1200D  \n",
-       "15  Canon EOS 1200D  \n",
-       "16  Canon EOS 1200D  \n",
-       "17  Canon EOS 1200D  \n",
-       "18  Canon EOS 1200D  \n",
-       "19  Canon EOS 1200D  \n",
-       "20  Canon EOS 1200D  \n",
-       "21  Canon EOS 1200D  \n",
-       "22  Canon EOS 1200D  \n",
-       "23  Canon EOS 1200D  \n",
-       "24  Canon EOS 1200D  \n",
-       "25  Canon EOS 1200D  \n",
-       "26  Canon EOS 1200D  \n",
-       "27  Canon EOS 1200D  \n",
-       "28  Canon EOS 1200D  \n",
-       "29  Canon EOS 1200D  \n",
-       "30  Canon EOS 1200D  \n",
-       "31  Canon EOS 1200D  \n",
-       "32  Canon EOS 1200D  \n",
-       "33   Google Pixel 6  \n",
-       "34   Google Pixel 6  "
+       "             camera  bit_depth  \n",
+       "0   Canon EOS 1200D         14  \n",
+       "1   Canon EOS 1200D         14  \n",
+       "2   Canon EOS 1200D         14  \n",
+       "3    Google Pixel 6         14  \n",
+       "4   Canon EOS 1200D         14  \n",
+       "5   Canon EOS 1200D         14  \n",
+       "6   Canon EOS 1200D         14  \n",
+       "7   Canon EOS 1200D         14  \n",
+       "8   Canon EOS 1200D         14  \n",
+       "9   Canon EOS 1200D         14  \n",
+       "10  Canon EOS 1200D         14  \n",
+       "11  Canon EOS 1200D         14  \n",
+       "12  Canon EOS 1200D         14  \n",
+       "13  Canon EOS 1200D         14  \n",
+       "14  Canon EOS 1200D         14  \n",
+       "15  Canon EOS 1200D         14  \n",
+       "16  Canon EOS 1200D         14  \n",
+       "17  Canon EOS 1200D         14  \n",
+       "18  Canon EOS 1200D         14  \n",
+       "19  Canon EOS 1200D         14  \n",
+       "20  Canon EOS 1200D         14  \n",
+       "21  Canon EOS 1200D         14  \n",
+       "22  Canon EOS 1200D         14  \n",
+       "23  Canon EOS 1200D         14  \n",
+       "24  Canon EOS 1200D         14  \n",
+       "25  Canon EOS 1200D         14  \n",
+       "26  Canon EOS 1200D         14  \n",
+       "27  Canon EOS 1200D         14  \n",
+       "28  Canon EOS 1200D         14  \n",
+       "29  Canon EOS 1200D         14  \n",
+       "30  Canon EOS 1200D         14  \n",
+       "31  Canon EOS 1200D         14  \n",
+       "32  Canon EOS 1200D         14  \n",
+       "33   Google Pixel 6         14  \n",
+       "34   Google Pixel 6         14  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -619,10 +655,11 @@
        " 'shutter': 10.0,\n",
        " 'iso': 6400,\n",
        " 'timestamp': datetime.datetime(2024, 11, 5, 0, 37, 58),\n",
-       " 'camera': 'Canon EOS 1200D'}"
+       " 'camera': 'Canon EOS 1200D',\n",
+       " 'bit_depth': 14}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
