Update imports to new namespace

--- a/src/demos/color_value_histograms.ipynb
+++ b/src/demos/color_value_histograms.ipynb
@@ -13,11 +13,8 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "from celestializer.definitions import Paths\n",
-                "from celestializer.image import RawImage\n",
-                "from celestializer import list_observations, raw_to_df, grab_series\n",
-                "from tqdm import tqdm\n",
-                "from celestializer.plot import rgb_histograms, subplots_grid"
+                "import celestializer as cl\n",
+                "from tqdm import tqdm"
             ]
         },
         {
@@ -45,25 +42,25 @@
                 }
             ],
             "source": [
-                "files = list_observations()\n",
-                "df = raw_to_df(files)\n",
+                "files = cl.list_observations()\n",
+                "df = cl.raw_to_df(files)\n",
                 "\n",
-                "img_sky = RawImage(Paths.observations / \"2024-11-05/IMG_3320.CR2\").load()\n",
-                "img_black = RawImage(Paths.calibration / \"2024-11-05/black_1.CR2\").load()\n",
-                "img_white = RawImage(Paths.calibration / \"2024-11-05/white_1.CR2\").load()\n",
+                "img_sky = cl.RawImage(cl.Paths.observations / \"2024-11-05/IMG_3320.CR2\").load()\n",
+                "img_black = cl.RawImage(cl.Paths.calibration / \"2024-11-05/black_1.CR2\").load()\n",
+                "img_white = cl.RawImage(cl.Paths.calibration / \"2024-11-05/white_1.CR2\").load()\n",
                 "img_sky.metadata.model_dump()"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "100%|██████████| 3/3 [00:01<00:00,  2.01it/s]\n"
+                        "100%|██████████| 3/3 [00:01<00:00,  2.24it/s]\n"
                     ]
                 },
                 {
@@ -78,14 +75,10 @@
                 }
             ],
             "source": [
-                "# TODO:\n",
-                "# rgb_histograms calls img.rgb_channels(), which converts to bit_depth=1\n",
-                "# pixel_histogram calls img.to_bitdepth(14), which fills NaNs with 0\n",
-                "\n",
                 "raw = img_sky.raw()\n",
-                "subplot_funcs = [[h] for h in rgb_histograms(raw, title=\"Pixel Values\")]\n",
-                "fig = subplots_grid(subplot_funcs, figsize=(10, 10))\n",
-                "fig.savefig(Paths.data / \"histograms_sky.pdf\")\n",
+                "subplot_funcs = [[h] for h in cl.rgb_histograms(raw, title=\"Pixel Values\")]\n",
+                "fig = cl.subplots_grid(subplot_funcs, figsize=(10, 10))\n",
+                "fig.savefig(cl.Paths.data / \"histograms_sky.pdf\")\n",
                 "display(fig)"
             ]
         },
@@ -98,7 +91,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "100%|██████████| 6/6 [00:02<00:00,  2.16it/s]\n"
+                        "100%|██████████| 6/6 [00:02<00:00,  2.79it/s]\n"
                     ]
                 },
                 {
@@ -114,11 +107,11 @@
             ],
             "source": [
                 "subplot_funcs = [\n",
-                "    rgb_histograms(img_black.raw(), title=\"Black Image\"),\n",
-                "    rgb_histograms(img_white.raw(), title=\"White Image\")\n",
+                "    cl.rgb_histograms(img_black.raw(), title=\"Black Image\"),\n",
+                "    cl.rgb_histograms(img_white.raw(), title=\"White Image\")\n",
                 "]\n",
-                "fig = subplots_grid(subplot_funcs, figsize=(16, 8))\n",
-                "fig.savefig(Paths.data / \"histograms_calibration.pdf\")\n",
+                "fig = cl.subplots_grid(subplot_funcs, figsize=(16, 8))\n",
+                "fig.savefig(cl.Paths.data / \"histograms_calibration.pdf\")\n",
                 "display(fig)"
             ]
         },
@@ -138,7 +131,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "100%|██████████| 8/8 [00:18<00:00,  2.27s/it]\n"
+                        "100%|██████████| 8/8 [00:18<00:00,  2.32s/it]\n"
                     ]
                 },
                 {
@@ -152,7 +145,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "100%|██████████| 24/24 [00:11<00:00,  2.04it/s]\n"
+                        "100%|██████████| 24/24 [00:10<00:00,  2.38it/s]\n"
                     ]
                 },
                 {
@@ -167,19 +160,19 @@
                 }
             ],
             "source": [
-                "iso_series = grab_series(df, \"iso\")\n",
+                "iso_series = cl.grab_series(df, \"iso\")\n",
                 "n_iso = len(iso_series)\n",
                 "\n",
                 "print(\"Load images\")\n",
                 "imgs = [\n",
-                "    (row[\"iso\"], RawImage(Paths.data / row[\"filepath\"]).load())\n",
+                "    (row[\"iso\"], cl.RawImage(cl.Paths.data / row[\"filepath\"]).load())\n",
                 "    for _, row in tqdm(iso_series.iterrows(), total=n_iso)\n",
                 "]\n",
                 "\n",
                 "print(\"Plot histograms\")\n",
-                "subplot_funcs = [rgb_histograms(img.raw(), title=f\"ISO {iso}\") for iso, img in imgs]\n",
-                "fig = subplots_grid(subplot_funcs, figsize=(16, 4*n_iso))\n",
-                "fig.savefig(Paths.data / \"histograms_iso.pdf\")\n",
+                "subplot_funcs = [cl.rgb_histograms(img.raw(), title=f\"ISO {iso}\") for iso, img in imgs]\n",
+                "fig = cl.subplots_grid(subplot_funcs, figsize=(16, 4*n_iso))\n",
+                "fig.savefig(cl.Paths.data / \"histograms_iso.pdf\")\n",
                 "display(fig)"
             ]
         },
@@ -199,7 +192,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "100%|██████████| 8/8 [00:18<00:00,  2.36s/it]\n"
+                        "100%|██████████| 8/8 [00:18<00:00,  2.32s/it]\n"
                     ]
                 },
                 {
@@ -213,7 +206,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "100%|██████████| 24/24 [00:11<00:00,  2.01it/s]\n"
+                        "100%|██████████| 24/24 [00:10<00:00,  2.28it/s]\n"
                     ]
                 },
                 {
@@ -228,19 +221,19 @@
                 }
             ],
             "source": [
-                "shutter_series = grab_series(df, \"shutter\")\n",
+                "shutter_series = cl.grab_series(df, \"shutter\")\n",
                 "n_shutter = len(shutter_series)\n",
                 "\n",
                 "print(\"Load images\")\n",
                 "imgs = [\n",
-                "    (row[\"shutter\"], RawImage(Paths.data / row[\"filepath\"]).load())\n",
+                "    (row[\"shutter\"], cl.RawImage(cl.Paths.data / row[\"filepath\"]).load())\n",
                 "    for _, row in tqdm(shutter_series.iterrows(), total=n_shutter)\n",
                 "]\n",
                 "\n",
                 "print(\"Plot histograms\")\n",
-                "subplot_funcs = [rgb_histograms(img.raw(), title=f\"Shutter {shutter}\") for shutter, img in imgs]\n",
-                "fig = subplots_grid(subplot_funcs, figsize=(16, 4*n_shutter))\n",
-                "fig.savefig(Paths.data / \"histograms_shutter.pdf\")\n",
+                "subplot_funcs = [cl.rgb_histograms(img.raw(), title=f\"Shutter {shutter}\") for shutter, img in imgs]\n",
+                "fig = cl.subplots_grid(subplot_funcs, figsize=(16, 4*n_shutter))\n",
+                "fig.savefig(cl.Paths.data / \"histograms_shutter.pdf\")\n",
                 "display(fig)"
             ]
         }
