--- a/src/demos/list_observation_index.ipynb
+++ b/src/demos/list_observation_index.ipynb
@@ -9,18 +9,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "from celestializer.definitions import Paths\n",
-                "from celestializer.image import RawImage\n",
-                "from celestializer import list_observations, raw_to_df"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -629,20 +618,22 @@
                             "34   Google Pixel 6         14  "
                         ]
                     },
-                    "execution_count": 2,
+                    "execution_count": 3,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
-                "files = list_observations()\n",
-                "df = raw_to_df(files)\n",
+                "import celestializer as cl\n",
+                "\n",
+                "files = cl.list_observations()\n",
+                "df = cl.raw_to_df(files)\n",
                 "df"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [
                 {
@@ -659,13 +650,13 @@
                             " 'bit_depth': 14}"
                         ]
                     },
-                    "execution_count": 3,
+                    "execution_count": 4,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
-                "img = RawImage(Paths.observations / \"2024-11-05/IMG_3320.CR2\").load()\n",
+                "img = cl.RawImage(cl.Paths.observations / \"2024-11-05/IMG_3320.CR2\").load()\n",
                 "img.metadata.model_dump()"
             ]
         }
