Add core functions and many demo notebooks which need refactoring

--- a/src/demos/show_images.ipynb
+++ b/src/demos/show_images.ipynb
@@ -132,7 +132,7 @@
             "source": [
                 "img_green = img.raw().channel(\"green\")\n",
                 "img_green.preview().show()\n",
-                "img_green.save(cl.Paths.data / \"sky_green_only.png\")"
+                "img_green.save(cl.Paths.saved / \"sky_green_only.png\")"
             ]
         },
         {
@@ -154,7 +154,7 @@
             ],
             "source": [
                 "img_green = img.raw().green_interpolated()\n",
-                "img_green.save(cl.Paths.data / \"sky_green_interpolated.png\")\n",
+                "img_green.save(cl.Paths.saved / \"sky_green_interpolated.png\")\n",
                 "img_green.preview().show()"
             ]
         }
