Split core.py file into multiple files

--- a/src/demos/hot_dead_pixels.ipynb
+++ b/src/demos/hot_dead_pixels.ipynb
@@ -6,23 +6,13 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "%load_ext autoreload\n",
-                "%autoreload 2"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 71,
-            "metadata": {},
-            "outputs": [],
-            "source": [
                 "import celestializer as cl\n",
                 "import numpy as np"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 72,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
@@ -39,7 +29,7 @@
                             " 'bit_depth': 14}"
                         ]
                     },
-                    "execution_count": 72,
+                    "execution_count": 2,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -53,18 +43,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 73,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [],
             "source": [
                 "img_in = img.green_interpolated()\n",
-                "img_in = cl.correct_vignette(img_in)\n",
+                "img_in = cl.correct_skyglow(img_in)\n",
                 "img_in = img_in.channel(\"green\")"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [
                 {
